# fastapi_hotels

./: pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/bookings/: models.py  router.py  schemas.py  service.py
app/core/: service.py
app/hotels/: models.py  router.py
app/hotels/rooms/: models.py  service.py
app/migrations/: env.py
app/migrations/versions/: 6c5fc1de9752_init.py
app/users/: auth.py  dependencies.py  models.py  router.py
