[tool.poetry]
name = "fastapi-hotels"
version = "0.1.0"
description = ""
authors = ["Max Bazarov <bazaroffm@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_hotels"}]

[tool.poetry.dependencies]
python = "^3.9.13"
fastapi = {extras = ["all"], version = "^0.95.0"}
flake8 = "^6.0.0"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
black = "^23.3.0"
bcrypt = "^4.0.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
